[package]
name = "firrtl-parser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "7.0.0-alpha1", features = [ "regexp" ] }
lazy_static = { version = "1.4.0" }
regex = { version = "1.5" }
