[package]
name = "firrtl-parser"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "a stupid simple, single function firrtl parser library"
authors = [ "sladuca777@gmail.com" ]
repository = "https://github.com/Sladuca/firrtl-parser"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "7.0.0" }
nom-regex = "0.2.0"
lazy_static = { version = "1.4.0" }
regex = { version = "1.5" }
